--- a/public/assets/css/smallNav.css
+++ b/public/assets/css/smallNav.css
@@ -3,9 +3,10 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: #ffab2ce4;
+    background-color: #11101D;
     display: flex;
     justify-content: center;
+    border-top: orange solid 2px;
 }
 
 .small-navbar li {
